Add option to highlight specific steps of the Grafcet

--- a/project/de.hsu.grafcet.edit/plugin.properties
+++ b/project/de.hsu.grafcet.edit/plugin.properties
@@ -130,3 +130,6 @@ _UI_VariableDeclarationType_input_literal = input
 _UI_VariableDeclarationType_output_literal = output
 _UI_VariableDeclarationType_internal_literal = internal
 _UI_VariableDeclarationType_step_literal = step
+_UI_HighlightableType_type = Highlightable Type
+_UI_HighlightableType_highlight_feature = Highlight
+_UI_VariableDeclaration_value_feature = Value
